# dtrx

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  INSTALL  Makefile  NEWS  README  README.md  contributions.mbox  entrypoint.sh  gen-manpage.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  test.sh  tox.ini
.github/workflows/: main.yml
archived/: README  README.md  contributions.mbox
dtrx/: dtrx.py
scripts/: dtrx
tasks/: __init__.py  docker.py  utils.py
tests/: compare.py  getting-started.crx  test-1.23.arj  test-1.23.rar  test-1.23.tar.lrz  test-lots-files.rar  test-pw.7z  test-pw.arj  test-pw.rar  test-text.br  test-text.lrz  test-text.zst  test.compressed.dmg  test.dmg  test.rpm  test.tar.zst  tests.yml
tools/: gen-manpage.sh  test-nonexistent-file-cmd.sh
tools/crx-example/: README.md  getting-started.pem
web/: index.html
