[metadata]
name = dtrx
version = attr: dtrx.dtrx.VERSION
description = Script to intelligently extract multiple archive types
long_description = file: README.md
long_description_content_type = text/markdown
author = Brett Smith
author_email = brettcsmith@brettcsmith.org
license = GNU General Public License version 3 or later
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
download_url = https://github.com/dtrx-py/dtrx
project_urls =
    homepage = http://www.brettcsmith.org/2007/dtrx/
    code = https://github.com/dtrx-py/dtrx

[options]
packages = dtrx
install_requires =
    platform==unsupported;platform_system=="Windows"
    subprocess32;python_version < '3.3'
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*

[options.entry_points]
console_scripts =
    dtrx = dtrx.dtrx:main

[bdist_wheel]
universal = 1
